--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "ssr:serve": "node public/js/ssr.js"
     },
     "dependencies": {
+        "@heroicons/vue": "^1.0.6",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
