--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,24 @@ services:
         container_name: crm-mkl-php
         restart: unless-stopped
         working_dir: /var/www/
+        environment:
+            - PHP_IDE_CONFIG=serverName=app
         volumes:
             - ./:/var/www
         networks:
             - crm-mkl
+        ports:
+            - "9000"
 
     db:
         image: mysql:8.0
         container_name: crm-mkl-db
         restart: unless-stopped
         environment:
-            MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
-            MYSQL_USER: ${DB_USERNAME}
+            MYSQL_DATABASE: pingcrm
+            MYSQL_ROOT_PASSWORD: password
+            MYSQL_PASSWORD: password
+            MYSQL_USER: user
             SERVICE_TAGS: dev
             SERVICE_NAME: mysql
         env_file:
