--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@popperjs/core": "^2.11.0",
         "@vue/server-renderer": "^3.2.27",
         "autoprefixer": "^10.4.0",
+        "axios": "^0.27.2",
         "eslint": "^8.4.1",
         "eslint-plugin-vue": "^8.2.0",
         "laravel-mix": "^6.0.41",
