--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint-plugin-vue": "^8.2.0",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "postcss": "^8.4.4",
         "postcss-import": "^12.0.1",
         "postcss-nesting": "^7.0.1",
