--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/server": "^0.1.0",
         "@popperjs/core": "^2.11.0",
         "@vue/server-renderer": "^3.2.27",
+        "@vuepic/vue-datepicker": "^3.4.8",
         "autoprefixer": "^10.4.0",
         "axios": "^0.27.2",
         "eslint": "^8.4.1",
