--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -14,13 +14,14 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     vim \
-    default-mysql-client
+    default-mysql-client \
+    libzip-dev
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
 
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
