--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "uuid": "^8.3.2",
         "vue": "^3.2.27",
         "vue-loader": "^16.2.0",
+        "vue3-dropzone": "^2.2.1",
         "webpack-node-externals": "^3.0.0"
     }
 }
