--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@vuepic/vue-datepicker": "^3.4.8",
         "autoprefixer": "^10.4.0",
         "axios": "^0.27.2",
+        "chart.js": "^4.4.4",
         "eslint": "^8.4.1",
         "eslint-plugin-vue": "^8.2.0",
         "laravel-mix": "^6.0.41",
