--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
+/storage/*
+!/storage/.gitignore
+
 /node_modules
 /public/css
 /public/hot
 /public/js
 /public/mix-manifest.json
 /public/storage
-/storage/*.key
 /vendor
-.DS_Store
 .env
 .env.backup
 .phpunit.result.cache
