--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -15,18 +15,23 @@ RUN apt-get update && apt-get install -y \
     unzip \
     vim \
     default-mysql-client \
-    libzip-dev
+    libzip-dev \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libwebp-dev
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install PHP extensions
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
+    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
 
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug
 
 COPY .docker/php/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+COPY .docker/php/php.ini /usr/local/etc/php/conf.d/custom.ini
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
